crates/dioform/tests/derive_contract/fail/union_model.stderr
error: #[derive(Form)] does not support union form models; use a named struct root with safe addressable fields
 --> tests/derive_contract/fail/union_model.rs:8:1
  |
8 | union UnsafeForm {
  | ^^^^^
